css/skills.css
.active-link{
    color: orange;
  }

.hide-data{
    display: none;
}
/*==================== QUALIFICATION ====================*/
.qualification__tabs{
    display: flex;
    justify-content: space-evenly;
    margin-bottom: var(--mb-2);
  }
  
  .qualification__button{
    font-size: var(--h3-font-size);
    font-weight: var(--font-medium);
    cursor: pointer;
  }
  @keyframes shake {
    2%, 18% {
        transform: translate3d(-2px, 0, 0);
    }

    4%, 16% {
        transform: translate3d(2px, 0, 0);
    }

    6%, 10%, 14% {
        transform: translate3d(-2px, 0, 0);
    }

    8%, 12% {
        transform: translate3d(2px, 0, 0);
    }
    
    18.1% {
        transform: translate3d(0px, 0, 0);
    }
}
  
  .qualification__button{
    animation-name: shake;
    animation-delay: 0s;
    animation-duration: 2s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
  }
  
  .qualification__icon{
    font-size: 1.8rem;
    margin-right: var(--mb-0-25);
  }
  
  .qualification__data{
    display: grid;
    grid-template-columns: 1fr max-content 1fr;
    column-gap: 3.5rem; 
    row-gap: 14rem;
    text-align: center;
    height: 7rem;
  }
  
  .qualification__title{
    font-size: var(--normal-font-size);
    font-weight: var(--font-medium);
    color: black;
  }
  
  .qualification__subtitle{
    display: inline-block;
    font-size: var(--small-font-size);
    margin-bottom: var(--mb-0-25)
  }
  
  .qualification__calendar{
    font-size: var(--smaller-font-size);
    color: var(--text-color-light);
  }
  
  .qualification__rounder{
    display: inline-block;
    width: 13px;
    height: 13px;
    background-color: var(--first-color);
    border-radius: 50%;
  }

  .full__stop{
    display: inline-block;
    position: relative;
    top: -2.5px;
    width: 13px;
    height: 1px;
    background-color: var(--first-color);
  }
  
  .qualification__line{
    display: block;
    width: 1px;
    height: 100%;
    background-color: var(--first-color);
    transform: translate(6px, -7px);
  }
  
  .qualification [data-content]{
    display: none
  }
  
  .qualification__active[data-content]{
    display: block;
  }
  

/*==================== SKILLS ====================*/

.skills__container {
    row-gap: 0;
    column-gap: 1rem;
    justify-content: center;
}
.work{
    padding-top: 0;
}
.popup_container{
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;

}
.popup{
    width: 50rem;
    height: 40rem;
    background: white;
    border-radius: 1rem;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%,-50%) scale(0.3);
    text-align: center;
    padding: 0 30px 30px;
    opacity: 1;
    color: #333;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    visibility: hidden;
    transition: transform 0.4s, top 0.4s;
}

.open-popup{
    visibility: visible;
    top: 50%;
    transform: translate(-50%, -50%) scale(1);
    z-index: 10;
}


.popup h2{
    font-size: 38px;
    font-weight: 500;
    margin: 30px 0 10px;
}
.popup button{
    position: absolute;
    right: 0;
    width: 25px;
    background-color: transparent;
    opacity: 0.7;
    color: black;
    outline: none;
    font-size: 18px;
    border-radius: 1rem;
    cursor: pointer;
    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
    margin-top: -7px;
    margin-right: -5px;

}
.section{
    padding: 0;
    height: 100vh;
}

.skills__img {
    box-shadow: 0px 4px 25px var(--shadow);
    border-radius: .5rem;
    text-align: center;
    width: 110%;
    background-color: var(--img-color)
}

.skills__img img {
    transition: 1s;
    text-align: center;
    width: 175px;
    height: 175px;
}

.skills__img img:hover {
    transform: scale(1.1);
}

.skills__img h1{
    font-size: 200px;
    color: black;
}
.work__title{
    color: gray
}
.page__title{
    margin-left: 18rem;
}

@media screen and (min-width: 768px){
    .skills__container {
        row-gap: 0;
        column-gap: 1rem;
        justify-content: center;
        margin-top: 5rem;
        padding: 2rem;
    }

    .popup_container{
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        position: absolute;
    
    }
    .popup{
        width: 50rem;
        height: 45rem;
        background: white;
        border-radius: 1rem;
        position: absolute;
        top: 0;
        left: 50%;
        transform: translate(-50%,-50%) scale(0.3);
        text-align: center;
        padding: 0 30px 30px;
        opacity: 0.97;
        color: #333;
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
        visibility: hidden;
        transition: transform 0.4s, top 0.4s;
    }
    
    .open-popup{
        visibility: visible;
        top: 25rem;
        transform: translate(-50%, -50%) scale(1);
        z-index: 10;
    }
    
    
    .popup h2{
        font-size: 38px;
        font-weight: 500;
        margin: 30px 0 10px;
    }
    .popup button{
        position: absolute;
        right: 0;
        width: 25px;
        background-color: transparent;
        opacity: 0.7;
        color: black;
        outline: none;
        font-size: 18px;
        border-radius: 1rem;
        cursor: pointer;
        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
        margin-top: -7px;
        margin-right: -5px;
    
    }

}

@media screen and (max-width: 420px){
    .qualification__tabs{
        margin-bottom: 0;

    }
    .qualification__data{
        column-gap: 0;
        height: 6rem;
    }
    .qualification__icon{
        font-size: 1.5rem;

    }
    .qualification__title{
        font-size: 0.8rem;
    }
    .qualification__subtitle{
        font-size: 0.5rem;
    }
    .qualification__calendar{
        font-size: 0.3rem;
    }
    .work__description{
        position: absolute;
        text-align: left;
        margin-top: 1rem;
    }
    .skills__container {
        row-gap: 0;
        column-gap: 0;
        justify-content: center;
        margin-top: 2rem;
        padding: 2rem;
        grid-template-columns: repeat(3,3fr)
    }

    .skills__img {
        box-shadow: 0px 4px 25px var(--shadow);
        border-radius: .5rem;
        text-align: center;
        width: 100%;
        /* opacity: var(--opacity); */
        background-color: var(--img-color)
    }

    .skills__img img {
        transition: 1s;
        text-align: center;
        width: 100px;
        height: 100px;
    }
    .nav__link{
        text-align: center;
        justify-content: center;
    }
    .nav__list{
        grid-template-columns: repeat(3,3fr);
    }
    .page__title{
        font-size: 20px;
        margin-left: 1.2rem;
    }
    .popup_container{
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        position: absolute;
    
    }
    .popup{
        width: 20rem;
        height: 35rem;
        background: white;
        border-radius: 1rem;
        position: absolute;
        top: 0;
        left: 50%;transform: translate(-50%,-50%) scale(0.3);
        text-align: center;
        padding: 0 30px 30px;
        opacity: 0.9;
        color: #333;
        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
        visibility: hidden;
        transition: transform 0.4s, top 0.4s;
    }
    
    .open-popup{
        visibility: visible;
        top: 50%;
        transform: translate(-50%, -50%) scale(1);
        z-index: 10;
    }
    
    
    .popup h2{
        font-size: 38px;
        font-weight: 500;
        margin: 30px 0 10px;
    }
    .popup button{
        position: absolute;
        right: 0;
        width: 25px;
        background-color: transparent;
        opacity: 0.7;
        color: black;
        outline: none;
        font-size: 18px;
        border-radius: 1rem;
        cursor: pointer;
        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
        margin-top: -7px;
        margin-right: -5px;
    
    }
}


img, a {
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
    -ms-transform: translateZ(0); /* IE 9 */
    -webkit-transform: translateZ(0); /* Chrome, Safari, Opera */
    transform: translateZ(0);
}

img, a {
    image-rendering: -moz-crisp-edges;         /* Firefox */
    image-rendering:   -o-crisp-edges;         /* Opera */
    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
    image-rendering: crisp-edges;
    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
  }
  

